cm-to-volume-all.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-to-volume-all
spec:
  containers:
  - name: my-container
    image: docker.io/busybox
    args: ['tail', '-f', '/dev/null']
    volumeMounts:
    - name: configmap-volume
      mountPath: /etc/config
  volumes:
  - name: configmap-volume
    configMap:
      name: config-k8s
