nginx-pod-with-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
spec:
  containers:
  - name: my-nginx-container
    image: docker.io/nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
  - name: ubuntu-sidecar-container
    image: docker.io/alicek106/rr-test:curl
    command: ["tail"]
    args: ["-f", "/dev/null"]
  imagePullSecrets:
  - name: regcred
