secret-env-from-selective.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-from-selective
spec:
  containers:
  - name: my-container
    image: docker.io/busybox
    args: ['tail', '-f', '/dev/null']
