secret-volume-from-all copy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-volume-from-all
spec:
  containers:
  - name: my-container
    image: docker.io/busybox
    args: ['tail', '-f', '/dev/null']
    volumeMounts:                ## 생성한 볼륨을 컨테이너에 마운트(맵핑)
    - name: secret-volume        ## 마운트할 볼륨 이름
      mountPath: /etc/secret     ## 컨테이너의 디렉터리
  volumes:
  - name: secret-volume
    secret:
      secretName: our-password   ## 볼륨에 맵핑될 시크릿의 이름
