web-deploy-replicas-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deply
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata: 
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: docker.io/nginx
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
