service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  type: ClusterIP
  selector:
    app: web1
  ports:
  - name: service-port
    port: 8080
    targetPort: 80
