ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.test.com
    http:
      paths:
      - pathType: Prefix
        path: /myservice
        backend:
          service:
            name: service1
            port: 
              number: 8080
      - pathType: Prefix
        path: /yourservice
        backend:
          service:
            name: service2
            port: 
              number: 9090
